--- a/docs/src/content/docs/getting-started/00-introduction.mdx
+++ b/docs/src/content/docs/getting-started/00-introduction.mdx
@@ -26,7 +26,7 @@ myBatchedMesh.bvh.delete(instanceId);
 myBatchedMesh.bvh.clear();
 ```
 
-### Per-instance uniforms (WebGLRenderer only)
+### Per-instance uniforms
 
 Assign unique shader uniforms to each instance, working with every materials.
 
